# mandelbrot

./: .gitignore  .travis.yml  Cargo.toml  README.md  aliases.js  rustfmt.toml  search-index.js  settings.html  source-files.js
examples/: animated.rs  animated_gif.rs  single_frame.rs
examples/shared/: cli.rs  common.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js  trait.PartialOrd.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
implementors/core/ops/arith/: trait.Add.js  (+2 more)
implementors/mandelbrot/color_scale/: trait.ColorScale.js
mandelbrot/: all.html  index.html  sidebar-items.js
mandelbrot/color_scale/: ColorScale.t.html  ContinuousColorScale.t.html  DiscreteColorScale.t.html  SimpleColorScale.t.html  index.html  sidebar-items.js  struct.ContinuousColorScale.html  struct.DiscreteColorScale.html  struct.SimpleColorScale.html  trait.ColorScale.html
mandelbrot/complex_number/: ComplexNumber.t.html  index.html  sidebar-items.js  struct.ComplexNumber.html
mandelbrot/mandelbrot/: Mandelbrot.t.html  MandelbrotConfig.t.html  index.html  sidebar-items.js  struct.Mandelbrot.html  struct.MandelbrotConfig.html  struct.Viewport.html
mandelbrot/pixel/: IntoPixel.t.html  PixelMath.t.html  index.html  sidebar-items.js  struct.IntoPixel.html  struct.Pixel.html  trait.PixelMath.html
src/: .lib.rs.swp  color_scale.rs  complex_number.rs  lib.rs  main.rs  mandelbrot.rs  pixel.rs
src/mandelbrot/: color_scale.rs.html  complex_number.rs.html  lib.rs.html  mandelbrot.rs.html  pixel.rs.html
tests/: end_to_end_single.rs
(+2 files in other folders)
