[package]
name = "mandelbrot"
description = "A fun introduction to Rust!"
version = "0.0.1"
authors = ["Rahul Butani <rr.butani@gmail.com>"]
repository = "https://github.com/rrbutani/mandelbrot.git"
license = "MIT"
readme = "README.md"

[badges]
travis-ci = { repository = "rrbutani/mandelbrot", branch = "master" }
coveralls = { repository = "rrbutani/mandelbrot", branch = "master", service = "github" }

[dependencies]
num-traits = "~0.2.5"

[dev-dependencies]
gif = "~0.10.0"
# png = "~0.12.0"
png = { git = "https://github.com/rrbutani/image-png" }
clap = "~2.32.0"
